feat: Initialize Terraform configuration for AWS infrastructure
- Added provider configuration for AWS with version constraints.
- Created security group to allow HTTP access on port 3000.
- Defined EC2 instances with user data to install Docker and run multiple services.
- Added output for the public IP of the Ubuntu instance.
- Defined variables for AMI, instance type, subnet ID, security group IDs, volume size, and environment.
- Created terraform.tfvars for environment-specific configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,10 @@ backend/user-service/package-lock.json
 frontend/node_modules/*
 frontend/package-lock.json
 
+terraform/.terraform/*
+terraform.tfstate
+terraform.tfstate.backup
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
